--- a/app/.gitlab-ci.yml
+++ b/app/.gitlab-ci.yml
@@ -1,18 +1,20 @@
-stage:
+image: docker:latest
+
+services:
+  - docker:dind
+
+stages:
   - build
-  - test
   - deploy
-build-job:
+
+variables:
+  DOCKER_IMAGE: collinsmunufie/flask-ci-cd-demo
+
+before_script:
+  - docker login -u "collinsmunufie" -p "Kophi!@2018"
+
+build:
   stage: build
   script:
-    -echo "build job"
-test-job:
-  stage: test
-  script:
-    -echo "test job"
-deploy-job:
-  stage: deploy
-  script:
-    -echo "deploying to production"
-
-
+    - docker build -t $DOCKER_IMAGE .
+    - docker push $DOCKER_IMAGE
